--- a/m03/index.html
+++ b/m03/index.html
@@ -4,6 +4,8 @@
 		<title>Module 03</title>
 		<link rel="Stylesheet" href="m03style.css" type="text/css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/dancing" type="text/css">
+		<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
 		<h1>The Cottage Garden</h1>
