--- a/artifact2/index.html
+++ b/artifact2/index.html
@@ -22,8 +22,8 @@
 <div class="clear"> </div>
 
 <div class="row"> <!-- Row 2 -->
-<div class="black"></div>
-<div class="white"></div>
+<div class="black"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
+<div class="white"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
 <div class="black"></div>
 <div class="white"></div>
 <div class="black"></div>
