--- a/artifact2/index.html
+++ b/artifact2/index.html
@@ -10,26 +10,26 @@
 <h1 id="title">Chessboard</h1>
 <div id="container">
 <div class="row"> <!-- Row 1 -->
-<div class="white"><img src="https://pixabay.com/static/uploads/photo/2013/07/12/16/56/chess-151540_640.png" alt="chess figure - black castle" width="20"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
+<div class="white"><img src="black-castle.png" alt="chess figure - black castle" width="20"></div>
+<div class="black"><img src="black-knight.png" alt="chess figure - black knight" width="20"></div>
+<div class="white"><img src="black-bishop.png" alt="chess figure - black bishop" width="20"></div>
+<div class="black"><img src="black-king.png" alt="chess figure - black king" width="20"></div>
+<div class="white"><img src="black-queen.png" alt="chess figure - black queen" width="20"></div>
+<div class="black"><img src="black-bishop.png" alt="chess figure - black bishop" width="20"></div>
+<div class="white"><img src="black-knight.png" alt="chess figure - black knight" width="20"></div>
+<div class="black"><img src="black-castle.png" alt="chess figure - black castle" width="20"></div>
 </div>
 <div class="clear"> </div>
 
 <div class="row"> <!-- Row 2 -->
 <div class="black"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
 <div class="white"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
+<div class="black"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
+<div class="white"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
+<div class="black"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
+<div class="white"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
+<div class="black"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
+<div class="white"><img src="black-pawn.png" alt="chess figure - black pawn" width="20"></div>
 </div>
 <div class="clear"> </div>
 <div class="row"> <!-- Row 3 -->
@@ -79,26 +79,26 @@
 </div>
 <div class="clear"> </div>
 <div class="row"> <!-- Row 7 -->
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
+<div class="white"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+<div class="black"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+<div class="white"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+<div class="black"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+<div class="white"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+<div class="black"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+<div class="white"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
+<div class="black"><img src="gold-pawn.png" alt="chess figure - gold pawn" width="20"></div>
 </div>
 <div class="clear"> </div>
 
 <div class="row"> <!-- Row 8 -->
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
+<div class="black"><img src="gold-castle.png" alt="chess figure - gold castle" width="20"></div>
+<div class="white"><img src="gold-knight.png" alt="chess figure - gold knight" width="20"></div>
+<div class="black"><img src="gold-bishop.png" alt="chess figure - gold bishop" width="20"></div>
+<div class="white"><img src="gold-queen.png" alt="chess figure - gold queen" width="20"></div>
+<div class="black"><img src="gold-king.png" alt="chess figure - gold king" width="20"></div>
+<div class="white"><img src="gold-bishop.png" alt="chess figure - gold bishop" width="20"></div>
+<div class="black"><img src="gold-knight.png" alt="chess figure - gold knight" width="20"></div>
+<div class="white"><img src="gold-castle.png" alt="chess figure - gold castle" width="20"></div>
 </div>
 </div> <!-- END OF CONTAINER -->
 
