--- a/artifact2/index.html
+++ b/artifact2/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="description" content="PROG 109 - Chessboard" />
 <meta charset="utf-8" />
-<title>Chess HTML5-Template</title>
+<title>Chessboard</title>
   <link rel="Stylesheet" href="artifact02style.css" type="text/css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/jellee-typeface" type="text/css"/>
 </head>
