--- a/m04/index.html
+++ b/m04/index.html
@@ -13,7 +13,12 @@
 
 <div id="nav">
 <ul>
-<li><a href="">Home</a></li>					<li><a href="">Products</a></li>					<li><a href="">Services</a></li>					<li><a href="">About</a></li>					<li><a href="">Contact</a></li>				</ul>
+<li><a href="">Home</a></li>
+<li><a href="">Products</a></li>
+<li><a href="">Services</a></li>
+<li><a href="">About</a></li>
+<li><a href="">Contact</a></li>
+</ul>
 </div>
 		
 <div id="content">
