--- a/m04/index.html
+++ b/m04/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Liquid Layout</title>
+<link rel="Stylesheet" href="m04style.css" type="text/css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/capitalis-minimalis" type="text/css"/>
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/unfonts-core" type="text/css"/>
 </head>
