--- a/m04/index.html
+++ b/m04/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/unfonts-core" type="text/css"/>
 </head>
 <body>
-<div class="bg"></div>
+<div id="bg"></div>
 <div id="header">
 <h1>Logo</h1>
 </div>
