--- a/m04/index.html
+++ b/m04/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width">
 <title>Liquid Layout</title>
 <link rel="Stylesheet" href="m04style.css" type="text/css">
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/capitalis-minimalis" type="text/css"/>
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/unfonts-core" type="text/css"/>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/capitalis-minimalis" type="text/css">
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/unfonts-core" type="text/css">
 </head>
 <body>
 <div id="bg"></div>
