--- a/module4/index.html
+++ b/module4/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Liquid Layout</title>
-<link rel="Stylesheet" href="m04style.css" type="text/css">
+<link rel="Stylesheet" href="module4.css" type="text/css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/capitalis-minimalis" type="text/css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/unfonts-core" type="text/css">
 </head>
