--- a/m04/index.html
+++ b/m04/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Liquid Layout</title>
+<title>Rachel's Final Project</title>
 <link rel="Stylesheet" href="m04style.css" type="text/css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/capitalis-minimalis" type="text/css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/unfonts-core" type="text/css">
@@ -16,17 +16,19 @@
 
 <div id="nav">
 <ul>
-<li><a href="">Home</a></li>
-<li><a href="">Products</a></li>
-<li><a href="">Services</a></li>
-<li><a href="">About</a></li>
-<li><a href="">Contact</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/module4/index.html">Home</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectabout/index.html">About</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectcoursework/index.html">Coursework</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectartifacts/index.html">Artifacts</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectmodulehw/index.html">Module Assignments</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectcontact/index.html">Contact Me</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finaproject/index.html">Baking</a></li>
 </ul>
 </div>
 		
 <div id="content">
 <div id="feature">
-<p>Feature</p>
+<p>Welcome! This website features a portfolio for websites I've developed for PROG 109 Intro to Web Development. Thank you for stopping by!</p>
 </div>
 <div class="column1">
 <p>Column One</p>
