--- a/finaproject/index.html
+++ b/finaproject/index.html
@@ -11,12 +11,12 @@
 <body>
 <div id="bg"></div>
 <div id="header">
-<h1>Logo</h1>
+<h1>Rachel's Final Project</h1>
 </div>
 
 <div id="nav">
 <ul>
-<li><a href="https://rquiambao93.github.io/prog109/module4/index.html">Home</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finaproject/index.html">Home</a></li>
 <li><a href="https://rquiambao93.github.io/prog109/finalprojectabout/index.html">About</a></li>
 <li><a href="https://rquiambao93.github.io/prog109/finalprojectcoursework/index.html">Coursework</a></li>
 <li><a href="https://rquiambao93.github.io/prog109/finalprojectartifacts/index.html">Artifacts</a></li>
