--- a/finalprojectabout/index.html
+++ b/finalprojectabout/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>Rachel's Final Project</title>
+<link rel="Stylesheet" href="finalprojectstyle.css" type="text/css">
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/capitalis-minimalis" type="text/css">
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/unfonts-core" type="text/css">
+</head>
+<body>
+<div id="bg"></div>
+<div id="header">
+<h1>About Me</h1>
+</div>
+
+<div id="nav">
+<ul>
+<li><a href="https://rquiambao93.github.io/prog109/finaproject/index.html">Home</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectabout/index.html">About</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectcoursework/index.html">Coursework</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectartifacts/index.html">Artifacts</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectmodulehw/index.html">Module Assignments</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finalprojectcontact/index.html">Contact Me</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/finaproject/index.html">Baking</a></li>
+</ul>
+</div>
+		
+<div id="content">
+<div id="feature">
+<p>Stay tuned... More info to come!</p>
+</div>
+<div class="column1">
+<p>Column One</p>
+</div>
+<div class="column2">
+<p>Column Two</p>
+</div>
+<div class="column3">
+<p>Column Three</p>
+</div>
+</div>
+<div id="footer">
+<p>&copy; Copyright 2011</p>
+</div>
+</body>
+</html>
 
