--- a/m05/index.html
+++ b/m05/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Bullseye! Tutoring</title>
-    <link rel="stylesheet" href="css/c04.css" />
+    <link rel="stylesheet" href="m05style.css" />
   </head>
   <body>
     <section id="page2">
