--- a/m05/index.html
+++ b/m05/index.html
@@ -11,6 +11,6 @@
       <img src="images/teacher.png" id="teacher2" alt="" />
       <section id="blackboard"></section>
     </section>
-    <script src="js/example.js"></script>
+    <script src="m04java.js"></script>
   </body>
 </html>
