--- a/finalprojectartifacts/index.html
+++ b/finalprojectartifacts/index.html
@@ -28,13 +28,15 @@
 		
 <div id="content">
 <div id="feature">
-<p>Stay tuned!</p>
+<p></p>
 </div>
 <div class="column1">
-<p>Column One</p>
+<p><a href="https://output.jsbin.com/lapacun" target="_blank"><img src="finalprojectartifacts/Claudia resume pic.png" alt="Claudia's CV" title="Claudia's CV" width="150"
+ height="150"/></a><br>This webpage uses standard HTML tags only to create a CV for Claudia Martinez. No CSS included.</p>
 </div>
 <div class="column2">
-<p>Column Two</p>
+<p><a href="https://rquiambao93.github.io/prog109/artifact2/index.html" target="_blank"><img src="finalprojectartifacts/Chessboard.png" alt="Chessboard" title="Chessboard" width="150"
+ height="150"/></a><br>This webpages uses HTML and CSS to create a chessboard.</p>
 </div>
 <div class="column3">
 <p>Column Three</p>
