--- a/finalprojectartifacts/index.html
+++ b/finalprojectartifacts/index.html
@@ -31,12 +31,12 @@
 <p></p>
 </div>
 <div class="column1">
-<p><a href="https://output.jsbin.com/lapacun" target="_blank"><img src="https://github.com/rquiambao93/prog109/blob/b57db4ce8271a1d4c08cf1dd7d01ed5da652e202/finalprojectartifacts/Claudia%20resume%20pic.png" alt="Claudia's CV" title="Claudia's CV" width="150"
- height="150"/></a><br>This webpage uses standard HTML tags only to create a CV for Claudia Martinez. No CSS included.</p>
+<p><img src="Claudia%20resume%20pic.png" alt="Claudia's CV" title="Claudia's CV" width="150"
+ height="150"/><br><a href="https://output.jsbin.com/lapacun" target="_blank">Resume:</a><br>This webpage uses standard HTML tags only to create a CV for Claudia Martinez. No CSS included.</p>
 </div>
 <div class="column2">
-<p><a href="https://rquiambao93.github.io/prog109/artifact2/index.html" target="_blank"><img src="finalprojectartifacts/Chessboard.png" alt="Chessboard" title="Chessboard" width="150"
- height="150"/></a><br>This webpages uses HTML and CSS to create a chessboard.</p>
+<p><img src="Chessboard.png" alt="Chessboard" title="Chessboard" width="150"
+ height="150"/><br><a href="https://rquiambao93.github.io/prog109/artifact2/index.html" target="_blank">Chessboard:</a><br>This webpages uses HTML and CSS to create a chessboard.</p>
 </div>
 <div class="column3">
 <p>Column Three</p>
