--- a/artifact03/index.html
+++ b/artifact03/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="description" content="Create a Rhombus">
 <meta charset="utf-8">
@@ -43,5 +43,5 @@ document.getElementById('symbol').value);">Display Rhombus</button>
 
 <div id="downLeft"></div> 
 <div id="downRight"></div>
-<script type = "text/javascript" src="rhombus.js"></script> </body>
+<script> "text/javascript" src="rhombus.js"></script> </body>
 </html>
