--- a/module07/index.html
+++ b/module07/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Rachel Quiambao - M07</title>
+    <link rel="stylesheet" href="m07style.css" />
+  </head>
+  <body>
+    <h1>TravelWorthy</h1>
+    <div id="info">
+      <h2>hotel availability</h2>
+      <div id="hotel1"></div>
+      <div id="hotel2"></div>
+    </div>
+    <script src="m07.js"></script>
+  </body>
+</html>
