--- a/module07/index.html
+++ b/module07/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Rachel Quiambao - M07</title>
-    <link rel="stylesheet" href="m07style.css" />
+    <link rel="stylesheet" href="m07style.css">
   </head>
   <body>
     <h1>TravelWorthy</h1>
