--- a/artifact04/index.html
+++ b/artifact04/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<h1>Form</h1>
 		<div id="errorMessages"></div>
-		<form action="thankyou.html" id="myform">
+		<form action="thankyoupage.html" id="myform">
 			<p>
 				<label for="FirstName">First Name:</label>
 				<input type="text" id="FirstName" name="FirstName" />
