--- a/artifact04/index.html
+++ b/artifact04/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rachel Quiambao - Artifact 04</title>
 		<style>
@@ -38,6 +37,7 @@
 			<p>
 				<label for="Password">Password:</label>
 				<input type="password" id="Password" name="Password" />
+				<br> Password should be max 7 characters, at least 1 uppercase, 1 lowercase, and 1 special character.
 			</p>
 			<p>
 				<label for="Address">Address:</label>
