--- a/artifact04/index.html
+++ b/artifact04/index.html
@@ -37,7 +37,7 @@
 			<p>
 				<label for="Password">Password:</label>
 				<input type="password" id="Password" name="Password" />
-				<br> Password should be max 7 characters, at least 1 uppercase, 1 lowercase, and 1 special character (~!@#$%&*).
+				<br> Password should be max 7 characters, at least 1 uppercase letter and 1 number.
 			</p>
 			<p>
 				<label for="Address">Address:</label>
