--- a/module08/module8assignment/index.html
+++ b/module08/module8assignment/index.html
@@ -18,6 +18,6 @@
 <li id="four">balsamic vinegar</li></ul>
     </div>
 <input type= "text" id="items"><button id="btnAddElement">Add new item</button>
-    <script src="./add-element.js"></script>
+    <script src="./module8.js"></script>
   </body>
 </html>
