--- a/module08/module8assignment/index.html
+++ b/module08/module8assignment/index.html
@@ -17,7 +17,7 @@
 <li id="three" class="hot">honey</li>
 <li id="four">balsamic vinegar</li></ul>
     </div>
-<input type= "text" id="items"><button id="btnAddElement">Add new item</button>
+<input type= "text" id="items"><button id="btnAddElement" onclick="addItem();">Add new item</button>
     <script src="module08assignment/module8.js"></script>
   </body>
 </html>
