--- a/module08/module8assignment/index.html
+++ b/module08/module8assignment/index.html
@@ -1,23 +1,19 @@
-
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <title>JavaScript &amp; jQuery - Chapter 5: Document Object Model - Add Element</title>
-    <link rel="stylesheet" href="https://javascriptbook.com/code/c05/css/c05.css" />
+    <link rel="stylesheet" href="css/module8.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
+</head>
+<body>
     <div id="page">
-      <h1 id="header">List</h1>
-      <h2>Buy groceries</h2>
-      <ul id="todo">
-<li id="one" class="hot">
-<em>fresh</em> figs</li>
-<li id="two" class="hot">pine nuts</li>
-<li id="three" class="hot">honey</li>
-<li id="four">balsamic vinegar</li></ul>
+        <h1 id="header">List</h1>
+        <h2>Buy groceries</h2>
+        <ul id="todo"><li id="1" class="hot"><em>fresh</em> figs</li><li id="2" class="hot">pine nuts</li><li id="3" class="hot">honey</li><li id="4">balsamic vinegar</li></ul>
     </div>
-<input type= "text" id="items"><button onclick="addItem();">Add new item</button>
-    <script src="./module08.js"></script>
-  </body>
+    <div id="entry">
+        <input type="text" id="grocery" /><button onclick="AddItem();">Add to Grocery List</button>
+    </div>
+    <script src="js/module8.js"></script>
+</body>
 </html>
