--- a/module08/module8assignment/index.html
+++ b/module08/module8assignment/index.html
@@ -14,6 +14,6 @@
     <div id="entry">
         <input type="text" id="grocery" /><button onclick="AddItem();">Add to Grocery List</button>
     </div>
-    <script src="js/module8.js"></script>
+    <script src="./module08.js"></script>
 </body>
 </html>
