--- a/module08/module8assignment/index.html
+++ b/module08/module8assignment/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>JavaScript &amp; jQuery - Chapter 5: Document Object Model - Add Element</title>
-    <link rel="stylesheet" href="css/module8.css" />
+    <link rel="stylesheet" href="https://javascriptbook.com/code/c05/css/c05.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
