--- a/artifact03/index.html
+++ b/artifact03/index.html
@@ -43,5 +43,5 @@ document.getElementById('symbol').value);">Display Rhombus</button>
 
 <div id="downLeft"></div> 
 <div id="downRight"></div>
-<script> "text/javascript" src="./rhombus.js"></script> </body>
+<script src="./rhombus.js"></script> </body>
 </html>
