--- a/artifact04/index.html
+++ b/artifact04/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="UTF-8" >
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 		<title>Rachel Quiambao - Artifact 04</title>
 		<style>
 			#errorMessages {
@@ -16,27 +16,27 @@
 		<form action="thankyoupage.html" id="myform">
 			<p>
 				<label for="FirstName">First Name:</label>
-				<input type="text" id="FirstName" name="FirstName" />
+				<input type="text" id="FirstName" name="FirstName" >
 			</p>
 			<p>
 				<label for="LastName">Last Name:</label>
-				<input type="text" id="LastName" name="LastName" />
+				<input type="text" id="LastName" name="LastName" >
 			</p>
 			<p>
 				<label for="EMail">EMail:</label>
-				<input type="text" id="EMail" name="EMail" />
+				<input type="text" id="EMail" name="EMail" >
 			</p>
 			<p>
 				<label for="Phone">Phone:</label>
-				<input type="text" id="Phone" name="Phone" />
+				<input type="text" id="Phone" name="Phone" >
 			</p>
 			<p>
 				<label for="Username">Username:</label>
-				<input type="text" id="Username" name="Username" />
+				<input type="text" id="Username" name="Username" >
 			</p>
 			<p>
 				<label for="Password">Password:</label>
-				<input type="password" id="Password" name="Password" />
+				<input type="password" id="Password" name="Password" >
 				<br> Password should be max 7 characters, at least 1 uppercase letter and 1 number.
 			</p>
 			<p>
@@ -45,7 +45,7 @@
 			</p>
 			<p>
 				<label for="City">City:</label>
-				<input type="text" id="City" name="City" />
+				<input type="text" id="City" name="City" >
 			</p>
 			<p>
 				<label for="State">State:</label>
@@ -371,18 +371,18 @@
 			</p>
 			<p>
 				<label for="Zipcode">Zipcode:</label>
-				<input type="text" id="Zipcode" name="Zipcode" />
+				<input type="text" id="Zipcode" name="Zipcode" >
 			</p>
 			<p>
 				<label for="Comments">Comments:</label>
 				<textarea cols="20" rows="5" id="Comments" name="Comments"></textarea>
 			</p>
 			<p>
-				<input type="submit" name="submit" value="Submit" />
+				<input type="submit" name="submit" value="Submit" >
 			</p>
 		</form>
 		<p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a></p>
- <p><a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a></p>
+ <p><a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p>
 		<script src="/script.js"></script>
 	</body>
 </html>
