--- a/module09/index.html
+++ b/module09/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>↩
-<html lang="en">↩
-<head>↩
-<meta charset="UTF-8" >↩
-<meta http-equiv="X-UA-Compatible" content="IE=edge" >↩
-<meta name="viewport" content="width=device-width, initial-scale=1.0" >↩
-    <title>Module 09 Assignment</title></head>↩
-<body>↩
- <h1>Click anywhere to place a dot!</h1>↩
-    <link rel="stylesheet" href="Mod09Style.css" type="text/css">↩
-        <input type="button" value="Clear" onClick="history.go(0)">↩
-  <script src="Mod09.js"></script>↩
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" >
+<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>Module 09 Assignment</title></head>
+<body>
+ <h1>Click anywhere to place a dot!</h1>
+    <link rel="stylesheet" href="Mod09Style.css" type="text/css">
+        <input type="button" value="Clear" onClick="history.go(0)">
+  <script src="Mod09.js"></script>
   </body>
