--- a/projecttest/index.html
+++ b/projecttest/index.html
@@ -79,28 +79,28 @@
   </div>
 </div>
 
-<!-- Container (Services Section) -->
+<!-- Container (Module Assignments) -->
 <div id="services" class="container-fluid text-center">
   <h2>MODULE ASSIGNMENTS</h2>
   <h4>Check out my weekly module assignments!</h4>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-       <a href="https://output.jsbin.com/lapacun">
+       <a href="https://output.jsbin.com/lapacun" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-ice-lolly-tasted logo-small"></span>
         </a>
       <h4>MODULE 01</h4>
       <p>A collection of delicious recipes.</p>
     </div>
     <div class="col-sm-4">
-     <a href="https://output.jsbin.com/bezukej">
+     <a href="https://output.jsbin.com/bezukej" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-cutlery logo-small"></span>
         </a>
       <h4>MODULE 02</h4>
       <p>A meal planning worksheet.</p>
     </div>
     <div class="col-sm-4">
-      <a href="https://rquiambao93.github.io/prog109/m03/index.html">
+      <a href="https://rquiambao93.github.io/prog109/m03/index.html" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-tree-deciduous logo-small"></span>
         </a>
       <h4>MODULE 03</h4>
@@ -110,7 +110,7 @@
   <br><br>
   <div class="row slideanim">
     <div class="col-sm-4">
-     <a href="https://rquiambao93.github.io/prog109/module4/index.html">
+     <a href="https://rquiambao93.github.io/prog109/module4/index.html" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-sunglasses logo-small"></span>
         </a>
       <h4>MODULE 04</h4>
@@ -122,7 +122,7 @@
       <p>A multiplication table.</p>
     </div>
     <div class="col-sm-4">
-      <a href="https://rquiambao93.github.io/prog109/module07/index.html">
+      <a href="https://rquiambao93.github.io/prog109/module07/index.html" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-bed logo-small"></span>
         </a>
       <h4 style="color:#303030;">MODULE 07</h4>
@@ -132,21 +132,21 @@
   <br><br>
   <div class="row slideanim">
     <div class="col-sm-4">
-    <a href="https://rquiambao93.github.io/prog109/module08/module8assignment/index.html">
+    <a href="https://rquiambao93.github.io/prog109/module08/module8assignment/index.html" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-shopping-cart logo-small"></span>
         </a>
       <h4>MODULE 08</h4>
       <p>An interactive grocery list.</p>
     </div>
      <div class="col-sm-4">
-    <a href="https://rquiambao93.github.io/prog109/module09/index.html">
+    <a href="https://rquiambao93.github.io/prog109/module09/index.html" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-record logo-small"></span>
         </a>
       <h4>MODULE 09</h4>
       <p>An interactive 'spotty' webpage.</p>
     </div>
      <div class="col-sm-4">
-    <a href="https://rquiambao93.github.io/prog109/module09/index.html">
+    <a href="https://rquiambao93.github.io/prog109/module09/index.html" target="_blank" rel="noopener noreferrer">
           <span class="glyphicon glyphicon-wrench logo-small"></span>
         </a>
       <h4>MODULE 10</h4>
