--- a/projecttest/index.html
+++ b/projecttest/index.html
@@ -28,8 +28,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#services">MODULE ASSIGNMENTS</a></li>
+        <li><a href="#portfolio">ARTIFACTS</a></li>
         <li><a href="#pricing">PRICING</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -68,7 +68,7 @@
 <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
-      <img src="https://github.com/rquiambao93/prog109/blob/d262445867cfa4af20aca90be3306e9e8684742c/finaproject/rqportfolio.jpg" alt="Biography photo">
+      <img src="./" alt="Biography photo">
     </div>
     <div class="col-sm-8">
       <h2>About Me</h2><br>
