--- a/projecttest/index.html
+++ b/projecttest/index.html
@@ -68,7 +68,7 @@
 <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
-      <img src="./" alt="Biography photo">
+      <img src="./rqportfolio.jpg" alt="Biography photo">
     </div>
     <div class="col-sm-8">
       <h2>About Me</h2><br>
