corrected profile pic size

--- a/rqfinalproject/index.html
+++ b/rqfinalproject/index.html
@@ -65,7 +65,7 @@
   <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
-      <img src="./rqportfolio.jpg" alt="Biography photo">
+      <img src="./rqportfolio.jpg" width="400" height="300" alt="Biography photo">
     </div>
     <div class="col-sm-8">
       <h2>About Me</h2><br>
