corrected nav bar links

--- a/rqfinalproject/donut/index.html
+++ b/rqfinalproject/donut/index.html
@@ -22,16 +22,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Home</a>
+      <a class="navbar-brand" href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#myPage">Home</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT ME</a></li>
-        <li><a href="#services">MODULES</a></li>
-        <li><a href="#portfolio">ARTIFACTS</a></li>
-<li><a href="#pricing">COURSEWORK</a></li>        
+        <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#about">ABOUT ME</a></li>
+        <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#services">MODULES</a></li>
+        <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#portfolio">ARTIFACTS</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#pricing">COURSEWORK</a></li>        
 <li><a href="#donuts">DONUT 101</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
