corrected home page link

--- a/rqfinalproject/thankyou/index.html
+++ b/rqfinalproject/thankyou/index.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Home</a>
+      <a class="navbar-brand" href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#myPage">Home</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
