--- a/rqfinalproject/donut/index.html
+++ b/rqfinalproject/donut/index.html
@@ -30,7 +30,7 @@
         <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#services">MODULES</a></li>
         <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#portfolio">ARTIFACTS</a></li>
 <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#pricing">COURSEWORK</a></li>        
-<li><a href="#donuts">DONUT 101</a></li>
+<li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/donut/index.html">DONUT 101</a></li>
         <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -43,7 +43,7 @@
   <p>Are you interested in learning how to make donuts? This is the page for you!</p> 
 </div>
 
-<div id="donuts" class = "container-fluid">
+<div class = "container-fluid">
   <div class="row">
     <div class="col-sm-8">
       <h2>Getting Started</h2><br>
@@ -74,7 +74,7 @@
 
 
 <!-- Container (Artifact Section) -->
-<div id="portfolio" class="container-fluid text-center bg-grey">
+<div class="container-fluid text-center bg-grey">
   <h2>Other Recipes to Try</h2><br>
   <h4>These are some of my favorite donut recipes. Try them out!</h4>
   <div class="row text-center slideanim">
@@ -110,7 +110,7 @@
 
   
 <!-- Container (Contact Section) -->
-<div  class="container-fluid bg-grey">
+<div class="container-fluid bg-grey">
 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/226882052&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/british-bake-off" title="British Bake Off" target="_blank" style="color: #cccccc; text-decoration: none;">British Bake Off</a> · <a href="https://soundcloud.com/british-bake-off/the-great-british-bake-off" title="The Great British Bake Off (Theme) - Tom Howe" target="_blank" style="color: #cccccc; text-decoration: none;">The Great British Bake Off (Theme) - Tom Howe</a></div>
 </div>
 
