trying to fix about me link

--- a/rqfinalproject/donut/index.html
+++ b/rqfinalproject/donut/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#about">ABOUT ME</a></li>
+        <li><a class="nav-link external" href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#about">ABOUT ME</a></li>
         <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#services">MODULES</a></li>
         <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#portfolio">ARTIFACTS</a></li>
 <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#pricing">COURSEWORK</a></li>        
