--- a/rqfinalproject/donut/index.html
+++ b/rqfinalproject/donut/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="nav-link external" href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#about">ABOUT ME</a></li>
+        <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#about">ABOUT ME</a></li>
         <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#services">MODULES</a></li>
         <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#portfolio">ARTIFACTS</a></li>
 <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/index.html#pricing">COURSEWORK</a></li>        
@@ -122,55 +122,5 @@
   </a>
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
 </footer>
-
-<script>
-$(document).ready(function(){
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
-   
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-  
-  $(window).scroll(function() {
-    $(".slideanim").each(function(){
-      var pos = $(this).offset().top;
-
-      var winTop = $(window).scrollTop();
-        if (pos < winTop + 600) {
-          $(this).addClass("slide");
-        }
-    });
-  });
-})
-
-document.querySelector("#myform").addEventListener("DomContentLoaded", function() {
-  fields.name = document.getElementByID('name')
-  fields.email = document.getElementByID('email')
-  fields.comments = document.getElementByID('comments')
-
-})
-
-function isNotEmpty(value) {
-  if (value ==null || typeof value == 'undefined') return false;
-
-  return (value/length > 0);
-}
-</script>
 </body>
 </html>
