--- a/m05/index.html
+++ b/m05/index.html
@@ -1,16 +1,18 @@
 
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Bullseye! Tutoring</title>
-    <link rel="stylesheet" href="m05style.css" />
-  </head>
-  <body>
-    <section id="page2">
-      <h1>Bullseye</h1>
-      <img src="teacher.png" id="teacher2" alt="" />
-      <section id="blackboard"></section>
-    </section>
-    <script src="m04java.js"></script>
-  </body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Bullseye! Tutoring</title>
+		<link rel="stylesheet" href="./m05style.css" />
+	</head>
+	<body>
+		<section id="page2">
+			<h1>Bullseye</h1>
+			<img src="./teacher.png" id="teacher" alt="teacher" />
+			<div id="blackboard"></div>
+		</section>
+		<script src="./m04java.js"></script>
+	</body>
 </html>
