--- a/rqfinalproject/index.html
+++ b/rqfinalproject/index.html
@@ -115,7 +115,9 @@
       <p>A festive webpage template.</p>
     </div>
     <div class="col-sm-4">
+      <a href="https://rquiambao93.github.io/prog109/m05/index.html" target="_blank" rel="noopener">
       <span class="glyphicon glyphicon-blackboard logo-small"></span>
+      </a>
       <h4>MODULE 05</h4>
       <p>A multiplication table.</p>
     </div>
@@ -144,7 +146,7 @@
       <p>An interactive 'spotty' webpage.</p>
     </div>
      <div class="col-sm-4">
-    <a href="https://rquiambao93.github.io/prog109/module09/index.html" target="_blank" rel="noopener">
+    <a href="./QuiambaoRachelModule10.htm" target="_blank" rel="noopener">
           <span class="glyphicon glyphicon-wrench logo-small"></span>
         </a>
       <h4>MODULE 10</h4>
