--- a/rqfinalproject/QuiambaoRachelModule10.htm
+++ b/rqfinalproject/QuiambaoRachelModule10.htm
@@ -89,7 +89,7 @@ ul
 
 <p class=MsoNormal align=right style='text-align:right'>February 28, 2023</p>
 
-<p class=MsoNormal align=center style='text-align:center'>Module 10 ñ Usability
+<p class=MsoNormal align=center style='text-align:center'>Module 10 ‚Äì Usability
 and Accessibility </p>
 
 <p class=MsoNormal>For this assignment, I used the website <a
@@ -103,7 +103,7 @@ This website is for a local coffee shop in Renton. </p>
   padding:0in 5.4pt 0in 5.4pt;height:15.0pt'>
   <p class=MsoNormal style='margin-bottom:0in;line-height:normal'>Website
   Passes HTML</p>
-  <p class=MsoNormal style='margin-bottom:0in;line-height:normal'>†Validator</p>
+  <p class=MsoNormal style='margin-bottom:0in;line-height:normal'>¬†Validator</p>
   </td>
   <td width=56 valign=top style='width:42.0pt;border:solid black 1.0pt;
   border-left:none;padding:0in 5.4pt 0in 5.4pt;height:15.0pt'>
@@ -113,7 +113,7 @@ This website is for a local coffee shop in Renton. </p>
   border-left:none;padding:0in 5.4pt 0in 5.4pt;height:15.0pt'>
   <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><img
   border=0 width=477 height=193 id="Picture 1645360742"
-  src="QuiambaoRachelModule10_files/image001.png"></p>
+  src="./image001.png"></p>
   </td>
  </tr>
  <tr style='height:15.0pt'>
@@ -132,7 +132,7 @@ This website is for a local coffee shop in Renton. </p>
   padding:0in 5.4pt 0in 5.4pt;height:15.0pt'>
   <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><img
   border=0 width=470 height=317 id="Picture 2066611593"
-  src="QuiambaoRachelModule10_files/image002.png"></p>
+  src="./image002.png"></p>
   </td>
  </tr>
  <tr style='height:15.0pt'>
@@ -151,7 +151,7 @@ This website is for a local coffee shop in Renton. </p>
   padding:0in 5.4pt 0in 5.4pt;height:15.0pt'>
   <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><img
   border=0 width=290 height=435 id="Picture 666933758"
-  src="QuiambaoRachelModule10_files/image003.png"></p>
+  src="./image003.png"></p>
   </td>
  </tr>
 </table>
@@ -162,23 +162,23 @@ This website is for a local coffee shop in Renton. </p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-.25in'>1.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>HTML
-Recommendation for ìA charset attribute on a meta element found after the first
-1024 bytes.î</p>
+Recommendation for ‚ÄúA charset attribute on a meta element found after the first
+1024 bytes.‚Äù</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:1.0in;text-indent:-.25in'>a.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>When
-looking at the siteís HTML, the meta charset attribute was added after a long
+looking at the site‚Äôs HTML, the meta charset attribute was added after a long
 string of text. I would move this to the beginning of the &lt;head&gt; section.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in'>2.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>HTML
-Recommendation for ìTrailing slash on void elements&nbsp;<a
+Recommendation for ‚ÄúTrailing slash on void elements&nbsp;<a
 href="https://github.com/validator/validator/wiki/Markup-%C2%BB-Void-elements#trailing-slashes-in-void-element-start-tags-do-not-mark-the-start-tags-as-self-closing"
 title="Trailing slashes in void-element start tags do not mark the start tags as self-closing">has
 no effect</a>&nbsp;and&nbsp;<a
 href="https://github.com/validator/validator/wiki/Markup-%C2%BB-Void-elements#trailing-slashes-directly-preceded-by-unquoted-attribute-values"
 title="Trailing slashes directly preceded by unquoted attribute values">interacts
-badly with unquoted attribute values</a>.î</p>
+badly with unquoted attribute values</a>.‚Äù</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:1.0in;text-indent:-.25in'>a.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>I
@@ -186,27 +186,27 @@ would remove the trailing slash on the link and meta elements. </p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in'>3.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>CSS
-Recommendation for ìValue Error : max-width&nbsp;auto&nbsp;is not
-a&nbsp;max-width&nbsp;value :&nbsp;autoî</p>
+Recommendation for ‚ÄúValue Error : max-width&nbsp;auto&nbsp;is not
+a&nbsp;max-width&nbsp;value :&nbsp;auto‚Äù</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:1.0in;text-indent:-.25in'>a.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>ëAutoí
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>‚ÄòAuto‚Äô
 is not an allowed value for max-width. I would change it to a percentage value.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in'>4.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>CSS
-Recommendation for ì<span style='font-family:"Helvetica",sans-serif;color:#1F2126;
+Recommendation for ‚Äú<span style='font-family:"Helvetica",sans-serif;color:#1F2126;
 background:white'>Value Error : font-size&nbsp;normal&nbsp;is not
-a&nbsp;font-size&nbsp;value :&nbsp;normalî.</span></p>
+a&nbsp;font-size&nbsp;value :&nbsp;normal‚Äù.</span></p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:1.0in;text-indent:-.25in'>a.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>I
 would suggest using pixel sizes for this, or if they want to use keywords, they
-can use ìsmallî or ìmediumî.</p>
+can use ‚Äúsmall‚Äù or ‚Äúmedium‚Äù.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in'>5.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Siteimprove
-Recommendation for ìImage link is missing alternative textî</p>
+Recommendation for ‚ÄúImage link is missing alternative text‚Äù</p>
 
 <p class=MsoListParagraphCxSpMiddle style='margin-left:1.0in;text-indent:-.25in'>a.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>I
@@ -215,7 +215,7 @@ the page</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in'>6.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>SiteImprove
-Recommendation for ìLink identified only by colorî</p>
+Recommendation for ‚ÄúLink identified only by color‚Äù</p>
 
 <p class=MsoListParagraphCxSpLast style='margin-left:1.0in;text-indent:-.25in'>a.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>The
