--- a/rqfinalproject/donut/index.html
+++ b/rqfinalproject/donut/index.html
@@ -122,5 +122,19 @@
   </a>
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
 </footer>
+ <script>
+   $(document).ready(function(){
+     
+   $(window).scroll(function() {
+  $(".slideanim").each(function(){
+    var pos = $(this).offset().top;
+
+    var winTop = $(window).scrollTop();
+    if (pos < winTop + 600) {
+      $(this).addClass("slide");
+    }
+  });
+});
+   </script
 </body>
 </html>
