--- a/rqfinalproject/donut/index.html
+++ b/rqfinalproject/donut/index.html
@@ -123,6 +123,8 @@
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
 </footer>
  <script>
+ $(document).ready(function(){  
+   
   .slideanim {visibility:hidden;}
 .slide {
   /* The name of the animation */
@@ -156,6 +158,7 @@
     -webkit-transform: translateY(0%);
   }
 }
+   })
    </script
 </body>
 </html>
