--- a/rqfinalproject/donut/index.html
+++ b/rqfinalproject/donut/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="col-sm-4">
       <br>
-      <div style="width:100%;height:0;padding-bottom:73%;position:relative;"><iframe src="https://giphy.com/embed/du4D0b0HWgxGg" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p></p>
+<div class="gif"><iframe src="https://giphy.com/embed/du4D0b0HWgxGg"  style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
   </div>
 </div>
 </div>
