relative url for donut

--- a/rqfinalproject/index.html
+++ b/rqfinalproject/index.html
@@ -30,7 +30,7 @@
         <li><a href="#services">MODULES</a></li>
         <li><a href="#portfolio">ARTIFACTS</a></li>
         <li><a href="#pricing">COURSEWORK</a></li>
-        <li><a href="https://rquiambao93.github.io/prog109/rqfinalproject/donut/index.html">DONUT 101</a></li>
+        <li><a href="./donut/index.html">DONUT 101</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
